examples/test/testpolicy11215.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11215
  namespace: namespace380
spec:
  podSelector:
    matchLabels:
      key6: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value20
          key20: value44
      podSelector:
        matchLabels:
          key19: value32
          key6: value35
          key18: value9
